docs: comprehensive update for MIDI and IDE enhancements
- Created MIDI_GUIDE.md (Centralized guide for musicians)
- Updated README.md with advanced MIDI features and IDE guide
- Updated LANGUAGE.md with new MIDI API (discovery, timestamps, polyphony)
- Updated UGEN_REFERENCE.md with MidiPoly documentation

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>